MODEIFIY html AND ADD RECORDING APP

--- a/fire/public/css/layout.css
+++ b/fire/public/css/layout.css
@@ -1,5 +1,5 @@
 
-html{overflow-y:scroll;} /* Forces a scrollbar when the viewport is larger than the websites content - CSS3 */
+html{overflow-y:scroll;} 
 
 body{margin:0; padding:0; font-size:13px; font-family:Georgia, "Times New Roman", Times, serif; color:#919191; background-color:#232323;}
 
@@ -12,41 +12,38 @@ a{outline:none; text-decoration:none;}
 
 code{font-weight:normal; font-style:normal; font-family:Georgia, "Times New Roman", Times, serif;}
 
+.fl_left{float:left;}
+.fl_right{float:right;}
 
-
-img{margin:0; padding:0; border:none; line-height:normal; vertical-align:middle;}
-.imgholder, .imgl, .imgr{padding:4px; border:1px solid #D6D6D6; text-align:center;}
-.imgl{float:left; margin:0 15px 15px 0; clear:left;}
-.imgr{float:right; margin:0 0 15px 15px; clear:right;}
-
-
-
-header, nav{display:block; margin:0; padding:0;}
+img{margin:0; padding:0; border:none; vertical-align:middle;align-content: center;}
 
 
 
-/* ----------------------------------------------Wrapper-------------------------------------*/
+
 
 div.wrapper{display:block; width:100%; margin:0; padding:0; text-align:left;}
 
+.row1, .row1 a{color:#C0BAB6; background-color:#333333;}
+.row2{color:#979797; background-color:#FFFFFF;}
+.row2 a{color:#FF9900; background-color:#FFFFFF;}
+.row3, .row3 a{color:#919191; background-color:#232323;}
 
-/*----------------------------------------------Generalise-------------------------------------*/
 
 #header, #container, #footer{display:block; width:960px; margin:0 auto;}
 
 nav ul{margin:0; padding:0; list-style:none;}
 
-h1, h2, h3, h4, h5, h6{margin:0; padding:0; font-size:16px; font-weight:bold; font-style:normal; line-height:normal; text-transform:uppercase;}
+h2{margin:20px; color:#232323;}
+p{text-align: center;margin: 5px;color: #232323;font-size: 20px;}
 
 
 
 #header{padding:20px 0;}
 
-#header #hgroup{float:left; margin:0 0 20px 0;}
-#header #hgroup h1, #header #hgroup h2{font-weight:normal; text-transform:none;}
+#header #hgroup{margin:0 0 20px 0;float:middle;}
+#header #hgroup h1, #header #hgroup h2{font-weight:bold; text-transform:none;text-align: center}
 #header #hgroup h1{font-size:36px;}
 #header #hgroup h2{font-size:13px;}
-
 
 
 #header nav{display:block; width:100%; margin:0; padding:20px 0; color:#C0BAB6; background-color:#232323; clear:both;}
@@ -58,5 +55,12 @@ h1, h2, h3, h4, h5, h6{margin:0; padding:0; font-size:16px; font-weight:bold; fo
 
 
 
+#container{padding:30px 0;}
+
+#container #homepage{line-height:1.6em;}
 
 
+
+
+#footer{padding:20px 0;}
+#footer p{margin:0; padding:0;float: middle;}
