stylized and moved submit button

--- a/fire/public/css/layout.css
+++ b/fire/public/css/layout.css
@@ -1,5 +1,5 @@
 
-html{overflow-y:scroll;} 
+html{overflow-y:scroll;}
 
 body{margin:0; padding:0; font-size:13px; font-family:Georgia, "Times New Roman", Times, serif; color:#919191; background-color:#232323;}
 
@@ -64,3 +64,7 @@ p{text-align: center;margin: 5px;color: #232323;font-size: 20px;}
 
 #footer{padding:20px 0;}
 #footer p{margin:0; padding:0;float: middle;}
+
+#submitButton {
+  text-align: center;
+}
