--- a/app/public/css/layout.css
+++ b/app/public/css/layout.css
@@ -47,7 +47,7 @@ p{text-align: center;margin: 5px;color: #232323;font-size: 20px;}
 
 
 #header nav{display:block; width:100%; margin:0; padding:20px 0; color:#C0BAB6; background-color:#232323; clear:both;}
-#header nav ul{padding:0 20px;}
+#header nav ul{padding:0 10px;}
 #header nav li{display:inline; margin-right:25px; text-transform:uppercase;}
 #header nav li.last{margin-right:0;}
 #header nav li a{color:#C0BAB6; background-color:#232323;}
@@ -64,3 +64,76 @@ p{text-align: center;margin: 5px;color: #232323;font-size: 20px;}
 
 #footer{padding:20px 0;}
 #footer p{margin:0; padding:0;float: middle;}
+
+
+
+.form-style{
+	max-width: 450px;
+	background: #FAFAFA;
+	padding: 30px;
+	margin: 50px auto;
+	box-shadow: 1px 1px 25px rgba(0, 0, 0, 0.35);
+	border-radius: 10px;
+	border: 6px solid #305A72;
+}
+.form-style ul{
+	padding:0;
+	margin:0;
+	list-style:none;
+}
+.form-style ul li{
+	display: block;
+	margin-bottom: 10px;
+	min-height: 35px;
+}
+.form-style ul li  .field-style{
+	box-sizing: border-box; 
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box; 
+	padding: 8px;
+	outline: none;
+	border: 1px solid #B0CFE0;
+	-webkit-transition: all 0.30s ease-in-out;
+	-moz-transition: all 0.30s ease-in-out;
+	-ms-transition: all 0.30s ease-in-out;
+	-o-transition: all 0.30s ease-in-out;
+
+}.form-style ul li  .field-style:focus{
+	box-shadow: 0 0 5px #B0CFE0;
+	border:1px solid #B0CFE0;
+}
+.form-style ul li .field-split{
+	width: 49%;
+}
+.form-style ul li .field-full{
+	width: 100%;
+}
+.form-style ul li input.align-left{
+	float:left;
+}
+.form-style ul li input.align-right{
+	float:right;
+}
+.form-style ul li textarea{
+	width: 100%;
+	height: 100px;
+}
+.form-style ul li input[type="button"], 
+.form-style ul li input[type="submit"] {
+	-moz-box-shadow: inset 0px 1px 0px 0px #3985B1;
+	-webkit-box-shadow: inset 0px 1px 0px 0px #3985B1;
+	box-shadow: inset 0px 1px 0px 0px #3985B1;
+	background-color: #216288;
+	border: 1px solid #17445E;
+	display: inline-block;
+	cursor: pointer;
+	color: #FFFFFF;
+	padding: 8px 18px;
+	text-decoration: none;
+	font: 12px Arial, Helvetica, sans-serif;
+}
+.form-style ul li input[type="button"]:hover, 
+.form-style ul li input[type="submit"]:hover {
+	background: linear-gradient(to bottom, #2D77A2 5%, #337DA8 100%);
+	background-color: #28739E;
+}
