--- a/app/public/css/layout.css
+++ b/app/public/css/layout.css
@@ -17,7 +17,7 @@ code{font-weight:normal; font-style:normal; font-family:Georgia, "Times New Roma
 
 img{margin:0; padding:0; border:none; vertical-align:middle;align-content: center;}
 
-
+.label-style{font-weight: bold;margin-right:20px;color:black;text-align: left;}
 
 
 
@@ -55,12 +55,12 @@ p{text-align: center;margin: 5px;color: #232323;font-size: 20px;}
 
 
 
-#container{padding:30px 0;}
+#container{padding: 30px 0;}
 
 #container #homepage{line-height:1.6em;}
 
 
-
+.sizing{width:550px; padding:20px;;display:block;}
 
 #footer{padding:20px 0;}
 #footer p{margin:0; padding:0;float: middle;}
@@ -69,24 +69,27 @@ p{text-align: center;margin: 5px;color: #232323;font-size: 20px;}
 
 .form-style{
 	max-width: 600px;
-	background: darkgray;
+	background:#eb6629;
 	padding: 20px;
 	margin: 50px auto;
-	box-shadow: 1px 1px 25px rgba(0, 0, 0, 0.35);
-	border-radius: 10px;
-	border: 6px solid black;
+	box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.35);
+	border-radius: 30px;
+	border: 20px;
+
 
 }
 .form-style ul{
-	padding:10;
+
 	margin:0;
 	list-style:none;
+    width:400px;
 }
 .form-style ul li{
 	display: block;
 	margin-bottom: 20px;
 	min-height: 35px;
-text-align: left;
+
+    width:400px;
 }
 .form-style ul li  .field-style{
 	box-sizing: border-box;
@@ -99,13 +102,15 @@ text-align: left;
 	-moz-transition: all 0.30s ease-in-out;
 	-ms-transition: all 0.30s ease-in-out;
 	-o-transition: all 0.30s ease-in-out;
+    float:right;
+    
 
-}.form-style ul li  .field-style:focus{
-	box-shadow: 0 0 5px #B0CFE0;
-	border:1px solid #B0CFE0;
 }
+
 .form-style ul li .field-split{
 	width: 50%;
+
+
 }
 
 
@@ -113,6 +118,7 @@ text-align: left;
 	width: 100%;
 	height: 100px;
 	float: center;
+
 }
 .form-style ul li input[type="button"],
 .form-style ul li input[type="submit"] {
@@ -155,8 +161,10 @@ table thead th {
 
 }
 table tbody td {
-    border: solid 1px #DDEEEE;
+    border: solid 2px black;
+    background-color:seashell;
     color: #333;
     padding: 10px;
     text-shadow: 1px 1px 1px #fff;
+    align-content: center;
 }
